--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -2,6 +2,7 @@
 
   <h1>My Lists</h1>
   <%@lists.each do |list| %>
+    <%= cl_image_tag list.photo.key, height: 300, width: 400, crop: :fill %>
     <h3><%= list.name %></h3>
     <%= link_to "See details", list_path(list), class: "btn btn-primary"%>
   <% end %>
