--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -2,9 +2,13 @@
 
   <h1>My Lists</h1>
   <%@lists.each do |list| %>
-    <%= cl_image_tag list.photo.key, height: 300, width: 400, crop: :fill %>
-    <h3><%= list.name %></h3>
-    <%= link_to "See details", list_path(list), class: "btn btn-primary"%>
+    <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/breakfast.jpg)">
+      <% if list.photo.attached? %>
+        <%= cl_image_tag list.photo.key, height: 300, width: 400, crop: :fill %>
+      <% end %>
+      <h3><%= list.name %></h3>
+      <%= link_to "See details", list_path(list), class: "btn btn-primary"%>
+    </div>
   <% end %>
 
   <ul class="list-unstyled mt-3"><li>
