--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,14 +1,12 @@
-<div class="container">
+<div class="container position-relative">
 
   <h1>My Lists</h1>
   <%@lists.each do |list| %>
-    <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/breakfast.jpg)">
-      <% if list.photo.attached? %>
-        <%= cl_image_tag list.photo.key, height: 300, width: 400, crop: :fill %>
+     <% if list.photo.attached? %>
+        <div class="card-category mt-3" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path list.photo.key, height: 500, crop: :fill %>')">
+          <%= link_to list.name, list_path(list) %>
+        </div>
       <% end %>
-      <h3><%= list.name %></h3>
-      <%= link_to "See details", list_path(list), class: "btn btn-primary"%>
-    </div>
   <% end %>
 
   <ul class="list-unstyled mt-3"><li>
